# MemoryPool

./: .gitignore  CMakeLists.txt  NOTICE  README.md  main.c
src/: CMemoryPool.cpp  CMemoryPool.h  memory.c  memory.h  memory_pool.c  memory_pool.h  pointer_bit_hacks.c  pointer_bit_hacks.h  tests.c  tests.cpp  tests.h
